resources/styles/style.css
@font-face {
    font-family: 'Raleway';
    src: url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap')
}

.global {
    position: fixed;
    top: 0;
    width: 100%;
}

.global h1 {
    font-family: 'Raleway';
    font-size: 26px;
    color: white;
    padding-left: 15px;
}

.global ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #333;
}

.global li {
    float: right;
    font-family: 'Raleway';
}

.global li a {
    display: block;
    color: white;
    text-align: center;
    padding: 28px 30px;
    text-decoration: none;
}

.active {
    background-color: orangered;
}

.global li a:hover {
    color: black;
    background-color: aquamarine;
    transition-duration: 1s;
}

.global li a:active {
    color: black;
    background-color: rgb(127, 178, 255);
    transition-duration: 0s;
}

body {
    background-image: url("../images/BG_Home.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    background-position: center;
}

h1 {
    font-family: 'Raleway';
    font-size: 3.5rem;
    text-align: center;
    color: white;
}

.home-intro{
    font-family: Helvetica, Arial, sans-serif;
    width: 300px;
    text-align: center;
    margin: 0 auto;
    color: white;
    padding: 25px 0;
}

table, td {
    text-align: center;
    vertical-align: center;
    font-family: 'Raleway';
}

table {
    margin-left: auto;
    margin-right: auto;
    border-spacing: 20px 0px;
}

td {
    width: 100px;
}

.buttons td {
    height: 50px;
}

.images td {
    height: 100px;
}

td a {
    background-color: orangered;
    color: white;
    border-radius: 5px;
    text-decoration: none;
    width: 100%;
    padding: 15px 30px;
    filter: drop-shadow(0px 10px 10px black)
}

td a:hover {
    color: black;
    background-color: aquamarine;
    transition-duration: 1s;
}

td a:active {
    color: black;
    background-color: rgb(127, 178, 255);
    transition-duration: 0s;
}

.images img {
    width: 1px;
    height: auto;
    opacity: 0;
    filter: drop-shadow(0px 10px 10px black)
}

.content {
    width: 66%;
    margin: 80px auto 0 auto;
    padding: 0 20px 20px 20px;
    color: white;
    font-size: 18px;
    font-family: Helvetica, Arial, sans-serif;
    background-color: rgba(0,0,0,0.75);
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 100px auto 100px auto 100px auto;
    column-gap: 25px;
}

.content h2,
.auditionHub h2 {
    grid-column: 1 / span 2;
    font-size: 2rem;
    font-family: 'Raleway';
    text-align: center;
    color: white;
}

.content img {
    margin: 0 auto;
}

.content a {
    color: orangered;
    text-decoration: none;
}

.content a:hover {
    color: aquamarine;
    text-decoration: none;
}

.resume {
    width: 66%;
    margin: 80px auto 0 auto;
    padding: 0 20px 20px 20px;
    color: white;
    font-size: 18px;
    font-family: Helvetica, Arial, sans-serif;
    background-color: rgba(0,0,0,0.75);
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 100px auto auto 100px auto auto 100px auto;
    column-gap: 25px;
}

.resume h2,
.skillImg {
    grid-column: 1 / span 2;
    font-size: 2rem;
    font-family: 'Raleway';
    text-align: center;
    color: white;
}

.skillImg img {
    display: inline;
    height: 100px;
    padding: 10px;
}

.resume img {
    margin: 0 auto;
}

.resume a {
    color: orangered;
    text-decoration: none;
}

.resume a:hover {
    color: aquamarine;
    text-decoration: none;
}

.auditionHub {
    width: 66%;
    margin: 80px auto 0 auto;
    padding: 0 20px 20px 20px;
    color: white;
    font-size: 18px;
    font-family: Helvetica, Arial, sans-serif;
    background-color: rgba(0,0,0,0.75);
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 100px auto auto 100px auto 100px auto 100px auto 100px auto;
    column-gap: 25px;
}

.subtitle,
.projDescription {
    grid-column: 1 / span 2;
} 

.subtitle {
    text-align: center;
}

.auditionHub h3 {
    grid-column: 1 / span 2;
    font-size: 1.5rem;
    font-family: 'Raleway';
    text-align: center;
    color: white;
}

.auditionHub img {
    width: 500px;
    margin: 0 auto;
}

.auditionHub a {
    color: orangered;
    text-decoration: none;
}

.auditionHub a:hover {
    color: aquamarine;
    text-decoration: none;
}

.contactInfo {
    width: 66%;
    margin: 80px auto 0 auto;
    padding: 0 20px 20px 20px;
    color: white;
    font-size: 18px;
    font-family: Helvetica, Arial, sans-serif;
    background-color: rgba(0,0,0,0.75);
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 100px auto auto;
    column-gap: 25px;
}

.contactInfo h2 {
    grid-column: 1 / span 3;
    font-size: 2rem;
    font-family: 'Raleway';
    text-align: center;
    color: white;
}

.contactInfo img {
    margin: 0 auto;
    width: 150px;
}

.contactInfo a {
    color: orangered;
    text-decoration: none;
}

.contactInfo a:hover {
    color: aquamarine;
    text-decoration: none;
}

.contactInfo p{
    text-align: center;
}

